--- a/css/itinerary.css
+++ b/css/itinerary.css
@@ -77,11 +77,11 @@
 .itineraryLine .flex-row-start-between {
 	font-size:0.75em;
 }
-.itineraryLine .flex-row-start-between div,
-.itineraryLine .flex-row-start-between i {
+.itineraryLine .flex-row-start-between div {
 	align-self:flex-end;
 }
 .itineraryLine .flex-row-start-between i {
+	align-self: center;
 	color:#231f20;
 	filter:alpha(opacity=50);
 	opacity: 0.5;
@@ -254,7 +254,7 @@
 	width:100%;
 	height:116px;
 	bottom:0;
-	background-image: linear-gradient(to top, #ffffff, rgba(255, 255, 255, 0));
+	/*background-image: linear-gradient(to top, #ffffff, rgba(255, 255, 255, 0));*/
 }
 .initialScreen.expand {
 	overflow:visible;
@@ -417,10 +417,12 @@ h1 span:nth-child(1) {
 .salesWrap .dialogBelongTo {
 	border-top: 13px solid #fff;
 }
+.flight .swiper-pagination {
+	bottom:0;
+}
 .flight .swiper-slide {
-	padding:90px 100px;	
+	padding:60px 100px 30px;	
 	background-color: #f0f2f4;
-	
 }
 .flight .swiper-slide:nth-child(odd) {
 	background-color:#f7f5f1;
@@ -433,7 +435,7 @@ h1 span:nth-child(1) {
 	border-bottom:none;
 }
 .flight .com_flightInfo .flex-row-start-between {
-	padding:15px 0;
+	padding:25px 0;
 	font-size:19px;
 }
 .flight .ibWrap {
